--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "selectize-integration-regression",
+  "name": "selectize-regression",
   "dependencies": {
     "ember": "~2.6.0",
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0"
+    "ember-qunit-notifications": "0.1.0",
+    "selectize": "miguelcobain/selectize.js#master"
   }
 }
