--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "selectize-integration-regression",
+  "name": "selectize-regression",
   "version": "0.0.0",
-  "description": "Small description for selectize-integration-regression goes here",
+  "description": "Small description for selectize-regression goes here",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -31,6 +31,7 @@
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-selectize": "0.5.5",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.6.0",
