--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,9 @@
 {
   "name": "selectize-regression",
   "dependencies": {
-    "ember": "~2.6.0",
+    "ember": "~2.7.0",
     "ember-cli-shims": "0.1.1",
-    "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0",
-    "selectize": "miguelcobain/selectize.js#master"
+    "selectize": "miguelcobain/selectize.js#master",
+    "ember-qunit-notifications": "0.1.0"
   }
 }
